--- a/roles/v2v.ci/tasks/miq_config_migration_plan.yml
+++ b/roles/v2v.ci/tasks/miq_config_migration_plan.yml
@@ -2,8 +2,8 @@
 - name: Check if migration plan already exists
   uri:
     url: "https://{{ inventory_hostname }}/api/service_templates/?filter[]=name={{ v2v_ci_migration_plan_name }}&expand=resources"
-    user: "{{ miq_app_username | default('admin') }}"
-    password: "{{ miq_app_password | default('smartvm') }}"
+    user: "{{ miq_app_username }}"
+    password: "{{ miq_app_password }}"
     method: GET
     validate_certs: no
   register: migration_plan_json
@@ -18,9 +18,9 @@
 
   - name: Remove migration plan if already exists
     uri:
-      url: "https://{{ inventory_hostname }}/api/service_templates/{{migration_plan_id}}"
-      user: "{{ miq_app_username | default('admin') }}"
-      password: "{{ miq_app_password | default('smartvm') }}"
+      url: "https://{{ inventory_hostname }}/api/service_templates/{{ migration_plan_id }}"
+      user: "{{ miq_app_username }}"
+      password: "{{ miq_app_password }}"
       method: DELETE
       status_code: 204
       validate_certs: no
@@ -29,8 +29,8 @@
 - name: Collect transformation mapping ID
   uri:
     url: "https://{{ inventory_hostname }}/api/transformation_mappings/?filter[]=name={{ v2v_ci_infra_mapping_name }}&expand=resources"
-    user: "{{ miq_app_username | default('admin') }}"
-    password: "{{ miq_app_password | default('smartvm') }}"
+    user: "{{ miq_app_username }}"
+    password: "{{ miq_app_password }}"
     method: GET
     validate_certs: no
   register: infra_mapping_json
@@ -45,8 +45,8 @@
 - name: Collect target VM ids
   uri:
     url: "https://{{ inventory_hostname }}/api/vms/?filter[]=name={{ item | regex_replace (' ', '%20') }}&expand=resources&attributes=name&filter[]=vendor=vmware&filter[]=ems_id!=null"
-    user: "{{ miq_app_username | default('admin') }}"
-    password: "{{ miq_app_password | default('smartvm') }}"
+    user: "{{ miq_app_username }}"
+    password: "{{ miq_app_password }}"
     method: GET
     validate_certs: no
   register: vm_ids_json
@@ -62,8 +62,8 @@
 - name: Remove migrated tag from VMs
   uri:
     url: "https://{{ inventory_hostname }}/api/vms/{{ item }}/tags"
-    user: "{{ miq_app_username | default('admin') }}"
-    password: "{{ miq_app_password | default('smartvm') }}"
+    user: "{{ miq_app_username }}"
+    password: "{{ miq_app_password }}"
     method: POST
     validate_certs: no
     body_format: json
@@ -77,8 +77,8 @@
 - name: Create migration plan
   uri:
     url: "https://{{ inventory_hostname }}/api/service_templates"
-    user: "{{ miq_app_username | default('admin') }}"
-    password: "{{ miq_app_password | default('smartvm') }}"
+    user: "{{ miq_app_username }}"
+    password: "{{ miq_app_password }}"
     method: POST
     validate_certs: no
     body_format: json
