--- a/roles/v2v.ci/tasks/miq_config_vmware_esx_hosts.yml
+++ b/roles/v2v.ci/tasks/miq_config_vmware_esx_hosts.yml
@@ -3,8 +3,8 @@
     - name: Collect the list of host authentications
       uri:
         url: "https://{{ inventory_hostname }}/api/hosts/?filter[]=name={{ hostvars[item].vmw_host_name }}&expand=resources&attributes=authentications"
-        user: "{{ miq_app_username | default('admin') }}"
-        password: "{{ miq_app_password | default('smartvm') }}"
+        user: "{{ miq_app_username }}"
+        password: "{{ miq_app_password }}"
         method: GET
         validate_certs: no
       register: host_json
@@ -22,8 +22,8 @@
     - name: Add authentication for the host
       uri:
         url: "https://{{ inventory_hostname }}/api/hosts/{{ host_id }}/"
-        user: "{{ miq_app_username | default('admin') }}"
-        password: "{{ miq_app_password | default('smartvm') }}"
+        user: "{{ miq_app_username }}"
+        password: "{{ miq_app_password }}"
         method: POST
         validate_certs: no
         body_format: json
