--- a/roles/v2v.ci/tasks/ssh_configuration.yml
+++ b/roles/v2v.ci/tasks/ssh_configuration.yml
@@ -20,8 +20,8 @@
     - name: Get VMware host {{ item }} json
       uri:
         url: "https://{{ inventory_hostname }}/api/hosts/?filter[]=name={{ item }}&expand=resources"
-        user: "{{ miq_app_username | default('admin') }}"
-        password: "{{ miq_app_password | default('smartvm') }}"
+        user: "{{ miq_app_username }}"
+        password: "{{ miq_app_password }}"
         method: GET
         validate_certs: no
       register: vmw_host_json
