Add missing remove vms delegate_to

--- a/roles/v2v.ci/tasks/main.yml
+++ b/roles/v2v.ci/tasks/main.yml
@@ -23,6 +23,7 @@
     - miq_create_vms
 
 - import_tasks: remove_rhv_vms.yml
+  delegate_to: localhost
   connection: local
   tags:
     - remove_rhv_vms
