Add netapp tasks

--- a/roles/v2v.ci/tasks/miq_create_vms.yml
+++ b/roles/v2v.ci/tasks/miq_create_vms.yml
@@ -1,5 +1,7 @@
 ---
 
+- include: '{{role_path}}/tasks/netapp.yml'
+
 # Remove & Create VMs
 - name: Remove VMware source instances if present
   vmware_guest:
