add iscsi discovery task

--- a/roles/v2v.ci/tasks/miq_create_vms.yml
+++ b/roles/v2v.ci/tasks/miq_create_vms.yml
@@ -1,6 +1,7 @@
 ---
 
 - include: '{{role_path}}/tasks/netapp.yml'
+- include: '{{role_path}}/tasks/rhv_storage_discovery.yml'
 - include: '{{role_path}}/tasks/rhv_add_storage.yml'
 
 # Remove & Create VMs
