--- a/roles/v2v.ci/tasks/rhv_add_storage.yml
+++ b/roles/v2v.ci/tasks/rhv_add_storage.yml
@@ -6,6 +6,9 @@
 
 - debug: var=lun_type
 
+- include: '{{role_path}}/tasks/netapp.yml'
+- include: '{{role_path}}/tasks/rhv_storage_discovery.yml'
+
 # Add data iSCSI storage domain:
 - name: Add data iSCSI storage domain
   ovirt_storage_domain:
