--- a/roles/v2v.ci/tasks/netapp.yml
+++ b/roles/v2v.ci/tasks/netapp.yml
@@ -1,20 +1,20 @@
 ---
 
-- include: create_igroup.yml
+- include: netapp_create_igroup.yml
   with_items:
       - "{{ igroups }}"
   loop_control:
     loop_var: igroups_iter
   when: ('CREATE_IGROUPS' in assets_to_create)
 
-- include: populate_luns.yml
+- include: netapp_populate_luns.yml
   with_items:
       - "{{ luns }}"
   loop_control:
     loop_var: luns_iter
   when: ('CREATE_LUNS' in assets_to_create)
 
-- include: map_luns_to_igroup.yml
+- include: netapp_map_luns_to_igroup.yml
     status="{{ luns_iter.status }}"
   with_items:
       - "{{ luns }}"
