--- a/roles/v2v.ci/tasks/rhv_add_storage.yml
+++ b/roles/v2v.ci/tasks/rhv_add_storage.yml
@@ -1,5 +1,14 @@
 ---
 
+- name: Add Conversion hosts in order to delegate to them
+  add_host:
+    name: "{{ item }}"
+    ansible_user: root
+    ansible_ssh_pass: "{{ hostvars[item].root_password }}"
+    ansible_pipelining: true
+  with_items:
+    - "{{ groups['ovirt_conversion_hosts'] }}"
+
 - name: Read luns type parameter
   set_fact:
     lun_type: "{{ luns[0]['type'] }}"
@@ -9,7 +18,7 @@
 - include: '{{role_path}}/tasks/netapp.yml'
 - include: '{{role_path}}/tasks/rhv_storage_discovery.yml'
 
-# Add data iSCSI storage domain:
+# Add data iSCSI storage domain
 - name: Add data iSCSI storage domain
   ovirt_storage_domain:
     auth:
@@ -27,3 +36,21 @@
       address: "{{ iscsi_target_ip }}"
     discard_after_delete: True
   when: lun_type == 'iscsi'
+
+
+# Add data FCP storage domain
+- name: Add data FCP storage domain
+  ovirt_storage_domain:
+    auth:
+      username: "{{ v2v_ci_rhv_user }}"
+      password: "{{ v2v_ci_rhv_password }}"
+      hostname: "{{ v2v_ci_rhv_hostname }}"
+      insecure: yes
+    name: data_fc_domain
+    host: "{{ groups['ovirt_conversion_hosts'][0] }}"
+    data_center: "{{ data_center_name }}"
+    fcp:
+      lun_id:
+       - "{{ '3' + create_lun_map_result['lun_naa_id'] }}"
+    discard_after_delete: True
+  when: False
