--- a/roles/v2v.ci/tasks/rhv_add_storage.yml
+++ b/roles/v2v.ci/tasks/rhv_add_storage.yml
@@ -9,14 +9,12 @@
   with_items:
     - "{{ groups['ovirt_conversion_hosts'] }}"
 
-- name: Read luns type parameter
-  set_fact:
-    lun_type: "{{ luns[0]['type'] }}"
-
-- debug: var=lun_type
+- debug: var=storage_type
 
 - include: '{{role_path}}/tasks/netapp.yml'
+
 - include: '{{role_path}}/tasks/rhv_storage_discovery.yml'
+  when: storage_type == 'iscsi'
 
 # Add data iSCSI storage domain
 - name: Add data iSCSI storage domain
@@ -35,7 +33,7 @@
        - "{{ '3' + create_lun_map_result['lun_naa_id'] }}"
       address: "{{ iscsi_target_ip }}"
     discard_after_delete: True
-  when: lun_type == 'iscsi'
+  when: storage_type == 'iscsi'
 
 
 # Add data FCP storage domain
@@ -53,4 +51,4 @@
       lun_id:
        - "{{ '3' + create_lun_map_result['lun_naa_id'] }}"
     discard_after_delete: True
-  when: False
+  when: storage_type == 'fcp'
