--- a/roles/v2v.ci/tasks/miq_conversion_hosts_enable.yml
+++ b/roles/v2v.ci/tasks/miq_conversion_hosts_enable.yml
@@ -1,63 +1,80 @@
 ---
 - block:
-    - name: Find host JSON
+
+    - name: Getting Conversion VM ID
       uri:
-        url: "https://{{ inventory_hostname }}/api/hosts/?filter[]=name={{ hostvars[item].rhv_host_name }}&expand=resources&attributes=authentications"
+        url: "https://{{ inventory_hostname }}/api/vms?expand=resources&attributes=name&filter[]=name=conversion_vm_0403_image_5.11.4.1-1_deployed_only"
         user: "{{ miq_app_username }}"
         password: "{{ miq_app_password }}"
         method: GET
         validate_certs: no
-      register: host_json
-      until: host_json.json.subcount == 1
-      retries: 30
-      delay: 60
+      register: conversion_vm_details
 
-    - set_fact:
-        query: "resources[?name=='{{ hostvars[item].rhv_host_name }}'].id"
-
-    - name: Extracting host id from JSON
+    - name: Extracting VM ID
       set_fact:
-        host_id: "{{ host_json.json | json_query(query) | first }}"
+        conv_vm_id: "{{ conversion_vm_details['json']['resources'][0]['id'] }}"
 
-    - name: Look for conversion host {{ hostvars[item].rhv_host_name }}
-      uri:
-        url: "https://{{ inventory_hostname }}/api/conversion_hosts/?filter[]=name={{ hostvars[item].rhv_host_name }}&expand=resources"
-        user: "{{ miq_app_username }}"
-        password: "{{ miq_app_password }}"
-        method: GET
-        validate_certs: no
-      register: conversion_host_json
+    - debug:
+        var: conv_vm_id
+#
+#    - name: Find host JSON
+#      uri:
+#        url: "https://{{ inventory_hostname }}/api/hosts/?filter[]=name={{ hostvars[item].rhv_host_name }}&expand=resources&attributes=authentications"
+#        user: "{{ miq_app_username }}"
+#        password: "{{ miq_app_password }}"
+#        method: GET
+#        validate_certs: no
+#      register: host_json
+#      until: host_json.json.subcount == 1
+#      retries: 30
+#      delay: 60
+#
+#    - set_fact:
+#        query: "resources[?name=='{{ hostvars[item].rhv_host_name }}'].id"
+#
+#    - name: Extracting host id from JSON
+#      set_fact:
+#        host_id: "{{ host_json.json | json_query(query) | first }}"
 
-    - block:
-        - set_fact:
-            query: "resources[?name=='{{ hostvars[item].rhv_host_name }}'].id"
-
-        - name: Extract conversion host ID from JSON
-          set_fact:
-             conversion_host_id: "{{ conversion_host_json.json | json_query(query) | first }}"
-
-        - name: Remove conversion host {{ hostvars[item].rhv_host_name }}
-          uri:
-            url: "https://{{ inventory_hostname }}/api/conversion_hosts/{{conversion_host_id}}"
-            user: "{{ miq_app_username }}"
-            password: "{{ miq_app_password }}"
-            method: DELETE
-            status_code: 204
-            validate_certs: no
-
-        - name: Wait until conversion host {{ hostvars[item].rhv_host_name }} is removed
-          uri:
-            url: "https://{{ inventory_hostname }}/api/conversion_hosts/?filter[]=name={{ hostvars[item].rhv_host_name }}&expand=resources"
-            user: "{{ miq_app_username }}"
-            password: "{{ miq_app_password }}"
-            method: GET
-            validate_certs: no
-            return_content: yes
-          register: conversion_host_post_remove_json
-          until: conversion_host_post_remove_json.json.subcount == 0
-          retries: 60
-          delay: 30
-      when: conversion_host_json.json.subcount != 0
+#    - name: Look for conversion host {{ hostvars[item].rhv_host_name }}
+#      uri:
+#        url: "https://{{ inventory_hostname }}/api/conversion_hosts/?filter[]=name={{ hostvars[item].rhv_host_name }}&expand=resources"
+#        user: "{{ miq_app_username }}"
+#        password: "{{ miq_app_password }}"
+#        method: GET
+#        validate_certs: no
+#      register: conversion_host_json
+#
+#    - block:
+#        - set_fact:
+#            query: "resources[?name=='{{ hostvars[item].rhv_host_name }}'].id"
+#
+#        - name: Extract conversion host ID from JSON
+#          set_fact:
+#             conversion_host_id: "{{ conversion_host_json.json | json_query(query) | first }}"
+#
+#        - name: Remove conversion host {{ hostvars[item].rhv_host_name }}
+#          uri:
+#            url: "https://{{ inventory_hostname }}/api/conversion_hosts/{{conversion_host_id}}"
+#            user: "{{ miq_app_username }}"
+#            password: "{{ miq_app_password }}"
+#            method: DELETE
+#            status_code: 204
+#            validate_certs: no
+#
+#        - name: Wait until conversion host {{ hostvars[item].rhv_host_name }} is removed
+#          uri:
+#            url: "https://{{ inventory_hostname }}/api/conversion_hosts/?filter[]=name={{ hostvars[item].rhv_host_name }}&expand=resources"
+#            user: "{{ miq_app_username }}"
+#            password: "{{ miq_app_password }}"
+#            method: GET
+#            validate_certs: no
+#            return_content: yes
+#          register: conversion_host_post_remove_json
+#          until: conversion_host_post_remove_json.json.subcount == 0
+#          retries: 60
+#          delay: 30
+#      when: conversion_host_json.json.subcount != 0
 
     - name: Add RHV Engine host to inventory
       add_host:
@@ -66,12 +83,17 @@
         ansible_ssh_pass: "{{ v2v_ci_rhv_root_password }}"
         ansible_pipelining: true
 
-    - name: Read RHV Engine SSH Private key
+    - name: Read RHV Engine SSH RSA Private key file /root/.ssh/id_rsa
       delegate_to: "{{ v2v_ci_rhv_hostname }}"
-      shell: tail -n +4 /etc/pki/ovirt-engine/keys/engine_id_rsa
+      shell: tail -n +4 /root/.ssh/id_rsa
       register: ssh_key
 
-#    - debug: msg="{{ssh_key.stdout}}"
+    - name: Read RHV Engine CA certificates bundle file /etc/pki/ovirt-engine/apache-ca.pem
+      delegate_to: "{{ v2v_ci_rhv_hostname }}"
+      shell: tail -n +4 /etc/pki/ovirt-engine/apache-ca.pem
+      register: ca_certs_file
+
+#    - debug: msg="{{ca_certs_file.stdout}}"
 
     - name: Enable conversion host {{ hostvars[item].rhv_host_name }}
       uri:
@@ -84,14 +106,15 @@
         body:
           action: create
           resources:
-            - name: "{{ hostvars[item].rhv_host_name }}"
-              resource_type: "ManageIQ::Providers::Redhat::InfraManager::Host"
-              resource_id: "{{ host_id }}"
+            - name: "conversion_vm_0403_image_5.11.4.1-1_deployed_only"
+              resource_type: "ManageIQ::Providers::Redhat::InfraManager::Vm"
+              resource_id: "{{ conv_vm_id }}"
               max_concurrent_tasks: "{{ v2v_max_concurrent_conversions }}"
-              auth_user: "root"
+              auth_user: "cloud-user"
               vmware_vddk_package_url: "{{ vmware_vddk_package_url }}"
               conversion_host_ssh_private_key: "{{ ssh_key.stdout }}"
               vmware_ssh_private_key: "{{ vmware_ssh_private_key }}"
+              tls_ca_certs: "{{ ca_certs_file.stdout }}"
       register: enable_conversion_host_json
 
     - name: Check enable conversion host task url is valid
