--- a/roles/v2v.ci/tasks/miq_install_nmon.yml
+++ b/roles/v2v.ci/tasks/miq_install_nmon.yml
@@ -46,7 +46,24 @@
     src: "{{ nmon_local_dir }}/{{ nmon_file }}"
     dest: "{{ nmon_location }}"
     mode: "0777"
-
   with_items:
     -  "{{ groups['ovirt_conversion_hosts'] }}"
+
+- name: Add Conversion host VMs
+  add_host:
+    name: "{{ item }}"
+    ansible_user: root
+    ansible_ssh_pass: "{{ hostvars[item].root_password }}"
+    ansible_pipelining: true
+  with_items:
+    -  "{{ groups['ovirt_conversion_host_vms'] }}"
+
+- name: Copy nmon to conversion host VMs
+  delegate_to: "{{ item }}"
+  copy:
+    src: "{{ nmon_local_dir }}/{{ nmon_file }}"
+    dest: "{{ nmon_location }}"
+    mode: "0777"
+  with_items:
+    -  "{{ groups['ovirt_conversion_host_vms'] }}"
 
