added loop_var 'rhv_item' for rhv_start_monitoring task

--- a/roles/v2v.ci/tasks/miq_start_monitoring.yml
+++ b/roles/v2v.ci/tasks/miq_start_monitoring.yml
@@ -10,6 +10,5 @@
   with_items:
     - "{{ groups['ovirt_conversion_hosts'] }}"
     - "{{ groups['ovirt_conversion_host_vms'] }}"
-
-
-
+  loop_control:
+    loop_var: rhv_item
