--- a/roles/v2v.ci/tasks/netapp.yml
+++ b/roles/v2v.ci/tasks/netapp.yml
@@ -1,23 +1,10 @@
 ---
 
+- set_fact:
+    fact_new_random_lun_name: "{{ lun.name }}_{{ 1000 | random(start=1) }}"
+
 - include: netapp_create_igroup.yml
-  with_items:
-      - "{{ igroups }}"
-  loop_control:
-    loop_var: igroups_iter
-  when: ('CREATE_IGROUPS' in assets_to_create)
 
-- include: netapp_populate_luns.yml
-  with_items:
-      - "{{ luns }}"
-  loop_control:
-    loop_var: luns_iter
-  when: ('CREATE_LUNS' in assets_to_create)
+- include: netapp_populate_lun.yml
 
-- include: netapp_map_luns_to_igroup.yml
-    status="{{ luns_iter.status }}"
-  with_items:
-      - "{{ luns }}"
-  loop_control:
-    loop_var: luns_iter
-  when: ('MAP_LUNS' in assets_to_create)
+- include: netapp_map_lun_to_igroup.yml
